--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.8)
 # cmake --build .
 # make VERBOSE=1
 
-project(pacman_sdl_opengl VERSION 1.0)
+project(cube3d_sdl_opengl VERSION 1.0)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(Boost_VERBOSE ON)
@@ -16,7 +16,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # -------------------------------------
 
-option(SUPPORT_OPENGL "Include support for OpenGL" OFF)
+option(SUPPORT_OPENGL "Include support for OpenGL" ON)
 
 # -------------------------------------
 
@@ -40,20 +40,14 @@ set(MYLIB_PATH ${CMAKE_SOURCE_DIR}/../my-lib)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	find_package(SDL2 REQUIRED)
-	find_package(Boost COMPONENTS program_options REQUIRED)
 endif()
 
 if (MSVC)
 	set(WINDOWS_SDL_DEV_LIBS "C:\\my-msvc-libs\\SDL2-2.28.5")
 
 	list(APPEND CMAKE_PREFIX_PATH "${WINDOWS_SDL_DEV_LIBS}\\cmake")
-	list(APPEND CMAKE_PREFIX_PATH "C:\\my-msvc-libs\\boost_1_83_0")
-	#list(APPEND CMAKE_PREFIX_PATH "C:\\my-msvc-libs\\boost_1_83_0\\lib64-msvc-14.3\\cmake\\boost_program_options-1.83.0")
-
-	set(my_Boost_LIBRARIES "C:\\my-msvc-libs\\boost_1_83_0\\lib64-msvc-14.3\\libboost_program_options-vc143-mt-gd-x64-1_83.lib")
 
 	find_package(SDL2 REQUIRED)
-	find_package(Boost COMPONENTS program_options REQUIRED)
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Android")
@@ -66,7 +60,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
 endif()
 
 if (NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+	set(CMAKE_RUNTIME_OUTPUT_DIcubeORY ${CMAKE_BINARY_DIR})
 endif()
 
 if (NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
@@ -83,7 +77,7 @@ if (SUPPORT_OPENGL)
 	find_package(OpenGL REQUIRED)
 	find_package(GLEW REQUIRED)
 
-	add_compile_definitions(PACMAN_SUPPORT_OPENGL=1)
+	add_compile_definitions(SUPPORT_OPENGL=1)
 endif()
 
 # -------------------------------------
@@ -101,24 +95,20 @@ endif()
 #include(GNUInstallDirs)
 
 # https://stackoverflow.com/questions/56397962/cmake-gtest-fatal-error-missing-stdlib-h-when-cross-compiling
-# It is known that using -isystem for standard compiler include directories breaks #include_next directive which is widely used for standard C++ header files.
-# See e.g. this question: -isystem on a system include directory causes errors.
+# It is known that using -isystem for standard compiler include dicubeories breaks #include_next dicubeive which is widely used for standard C++ header files.
+# See e.g. this question: -isystem on a system include dicubeory causes errors.
 
 include_directories(
 	"${SDL2_INCLUDE_DIRS}"
 	"${MYLIB_PATH}/include"
 	"${CMAKE_SOURCE_DIR}/src"
-	"${CMAKE_SOURCE_DIR}/src/graphics"
 	)
-
-if (NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
-	include_directories("${Boost_INCLUDE_DIRS}")
-endif()
 
 if (SUPPORT_OPENGL)
 	include_directories(
 		"${OPENGL_INCLUDE_DIR}"
 		"${GLEW_INCLUDE_DIRS}"
+		"${CMAKE_SOURCE_DIR}/src/opengl"
 		)
 endif()
 
